HVAC Backup 2/objects/WhatsApp_Bot_Credentials__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>API_KEY__c</fullName>
        <description>x-api-key</description>
        <label>API KEY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_ID__c</fullName>
        <description>bot id</description>
        <label>BOT ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sender__c</fullName>
        <description>Sender Id</description>
        <label>Sender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>WhatsApp Bot Credentials</label>
</CustomObject>